# hero

./: .gitignore  AGENTS.md  ARCHITECT_BLUEPRINT.md  COUNCIL_DIAGNOSIS_PLATFORM_FAILURE.md  COUNCIL_READINESS_REPORT.md  COUNCIL_REPORT_HERO_REBUILD.md  COUNCIL_REPORT_LEGAL_PHASE.md  HEARTBEAT.toon  HERO_V4_PLAN.md  Ideas_by_me.md  KIMI_NOTION_PLAN.md  LEAD_DISPATCH_FIX.md  MINIMAX_KILL_FIX.md  NAVIGATION_TREE.md  PIPELINE_DESIGN.md  PLAN.md  README.md  RESOURCES.md  SPEC.md  SPEC_VIEWPORT.md  TOOLS.md  VIEWPORT_HANDOFF.md  VIEWPORT_IMPROVE_PLAN_DS4.md  army.yaml  improvement_plan_deepseek.md  improvement_plan_mimov25.md  improvement_plan_mimov25pro.md  improvement_plan_minimax.md  improvement_plan_step35.md  improvement_plan_step36.md  index.html  piece1-hero-shell.html  piece3-pipeline-bars.html  piece6-deadline.html  pyproject.toml  viewport_competition_all_entries.md  viewport_competition_kimi_review.md
.openclaw/: workspace-state.json
.understand-anything/: fingerprints.json  knowledge-graph.json  meta.json
docs/: EXCHANGE_LAYER_IMPLEMENT.md  EXCHANGE_LAYER_SPEC.md  PIPELINE.md  SUPERPOWER_INTEGRATION_PROPOSAL.md  TEACH_SKILL_BUILD.md  TEACH_SKILL_DESIGN.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  manifest.json
hero-os/: BUILD_PLAN_68PCS.md
memory/: 2026-06-01.md  2026-06-13.md
prompts/: LEAD_BRIEF.md  soldier-1-design-system.md  soldier-2-api-layer.md  soldier-3-components.md  soldier-4-control-features.md  soldier-5-mobile-responsive.md  soldier-6-futuristic-polish.md  soldier-7-integration.md
scripts/: install-hero.sh
(+472 files in other folders)
